--- a/loop.ipynb
+++ b/loop.ipynb
@@ -1000,6 +1000,573 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_table(num):\n",
+    "    for i in range(1,11):\n",
+    "        result = num * i \n",
+    "        print(result)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n",
+      "35\n",
+      "40\n",
+      "45\n",
+      "50\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "table = generate_table(x)\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square_element(input_list):\n",
+    "    temp = []\n",
+    "    for x in input_list:\n",
+    "        temp.append(x**2)\n",
+    "    return temp\n",
+    "    \n",
+    "\n",
+    "output = square_element([5,2,3,4])\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def avg_fun(input_lst):\n",
+    "    return sum(input_lst)/len(input_lst)\n",
+    "\n",
+    "avg_fun([25, 4, 9, 16])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [25, 4, 9, 16]\n",
+    "temp = 0\n",
+    "for i in x:\n",
+    "    temp+=i\n",
+    "temp/len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[25, 4, 9, 16]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# built in function \n",
+    "# map \n",
+    "# filter \n",
+    "\n",
+    "\n",
+    "# >>>> map(function , iterable)\n",
+    "lst = [5,2,3,4]\n",
+    "\n",
+    "def square_function(x):\n",
+    "    return x**2\n",
+    "\n",
+    "list(map(square_function,lst))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def apna_map(fun,lst):\n",
+    "    temp = []\n",
+    "    for item in lst:\n",
+    "        output = fun(item)   ## calling function inside the function\n",
+    "        temp.append(output)\n",
+    "    return temp\n",
+    "    \n",
+    "\n",
+    "lst = [5,2,3,4]\n",
+    "\n",
+    "def square_function(x):\n",
+    "    return x**2\n",
+    "\n",
+    "def incrementbytwo(x):\n",
+    "    return x+2\n",
+    "\n",
+    "output = apna_map(incrementbytwo,lst)\n",
+    "print(output)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 53, 5, 45, 765, 5, 75, 73, 65, 45, 9]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter\n",
+    "\n",
+    "lst = [3,53,5,45,765,5,76,75,73,98,6,65,45,44,9]\n",
+    "lst\n",
+    "\n",
+    "def even_filter(x):\n",
+    "    return x < 10 \n",
+    "\n",
+    "# list(filter(even_filter,lst))\n",
+    "list(filter(lambda x : x%2!=0  ,lst))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lambda function\n",
+    "\n",
+    "\n",
+    "x = lambda x:x+5\n",
+    "x(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add = lambda x , y : x + y\n",
+    "add(10,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[25, 4, 9, 16]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [5,2,3,4]\n",
+    "\n",
+    "list(map(lambda x : x**2,lst))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[25, 4, 9, 16]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [5,2,3,4]\n",
+    "squares = [i**2 for i in lst]\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10.90909090909091,\n",
+       " 11.90909090909091,\n",
+       " 12.90909090909091,\n",
+       " 13.90909090909091,\n",
+       " 41.90909090909091,\n",
+       " 9.90909090909091,\n",
+       " 15.90909090909091,\n",
+       " 11.90909090909091,\n",
+       " 12.90909090909091,\n",
+       " 9.90909090909091,\n",
+       " 21.90909090909091]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [3,4,5,6,34,2,8,4,5,2,14]\n",
+    "temp = 0\n",
+    "\n",
+    "def avg_function(list):\n",
+    "    temp = 0\n",
+    "    for i in list:\n",
+    "         temp+=i\n",
+    "    output=temp/len(list)\n",
+    "    return output\n",
+    "    \n",
+    "\n",
+    "q =  avg_function(list1)   \n",
+    "\n",
+    "list(filter(lambda x :x>=q , list1))\n",
+    "\n",
+    "list(map(lambda x : x+q, list1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.909090909090909"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apna_map(fun,lst):\n",
+    "    temp = []\n",
+    "    for item in lst:\n",
+    "        output = fun(item)   ## calling function inside the function\n",
+    "        temp.append(output)\n",
+    "    return temp\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apna_filter(fun,list):\n",
+    "    temp = []\n",
+    "    for item in lst:\n",
+    "        output = fun(item)\n",
+    "        temp.append(output)\n",
+    "    return temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "*\n",
+    "**\n",
+    "***\n",
+    "****\n",
+    "*****\n",
+    "\n",
+    "\n",
+    "1\n",
+    "1 2\n",
+    "1 2 3\n",
+    "1 2 3 4\n",
+    "1 2 3 4 5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "double the output of number 15 = 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a Python program to create a function that takes one argument, and that argument will be multiplied with an unknown given number.\n",
+    "\n",
+    "def fun_multiply(n):\n",
+    "    return lambda x: x*n\n",
+    "\n",
+    "result = fun_multiply(2)\n",
+    "print(\"double the output of number 15 =\", result(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'starting'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 7\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Write a Python program to find if a given string starts with a given character using Lambda.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m starting \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m.\u001b[39mstarting(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mstarting\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mPython\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[6], line 4\u001b[0m, in \u001b[0;36m<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Write a Python program to find if a given string starts with a given character using Lambda.\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m starting \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstarting\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(starting(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPython\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'starting'"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a Python program to find if a given string starts with a given character using Lambda.\n",
+    "\n",
+    "\n",
+    "starting = lambda x: True if x.starting('P') else False\n",
+    "\n",
+    "\n",
+    "print(starting('Python'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[19, 65, 57, 39, 152, 190]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find numbers divisible by nineteen or thirteen from a list of numbers using Lambda.\n",
+    "\n",
+    "x = [19, 65, 57, 39, 152, 639, 121, 44, 90, 190]\n",
+    "\n",
+    "output = list(filter(lambda x:(x%19==0 or x%13==0) , x))\n",
+    "\n",
+    "print(output)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "#*\n",
+    "#**\n",
+    "#***\n",
+    "#****\n",
+    "#*****\n",
+    "\n",
+    "for i in range(1,6):\n",
+    "    print(\"*\" * i )\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "#1 2\n",
+    "#1 2 3\n",
+    "#1 2 3 4\n",
+    "#1 2 3 4 5\n",
+    "\n",
+    "for i in range(1,6):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(j)\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
